--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Description:</strong>
+  <strong>Todo Item:</strong>
   <%= @list.description %>
-</p>
-
-<p>
-  <strong>Completed:</strong>
-  <%= @list.completed %>
 </p>
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
