--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,12 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Lists</h1>
+<h1>My To-Do List</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Description</th>
-      <th>Completed</th>
+      <th>Todo Item</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New List', new_list_path %>
+<%= link_to 'Add Todo Item', new_list_path %>
