--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,27 +2,34 @@
 
 <h1>My To-Do List</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Todo Item</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<table class="table table-bordered">
 
   <tbody>
     <% @lists.each do |list| %>
-      <tr>
-        <td><%= list.description %></td>
-        <td><%= list.completed %></td>
-        <td><%= link_to 'Show', list %></td>
-        <td><%= link_to 'Edit', edit_list_path(list) %></td>
-        <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
+      <% if list.completed %>
+      <tr class="table-secondary">
+        <td class="striker"><%= link_to list.description, edit_list_path(list) %></td>
+        <td>
+          <% link_to 'Show', list %>
+          <% link_to 'Edit', edit_list_path(list) %>
+          <center><%= link_to 'Delete', list, method: :delete, data: { confirm: 'Are you sure?' } %></center>
+        </td>
       </tr>
+      <% else %>
+        <tr>
+          <td><%= link_to list.description, edit_list_path(list) %></td>
+          <td>
+            <% link_to 'Show', list %>
+            <% link_to 'Edit', edit_list_path(list) %>
+            <center><%= link_to 'Delete', list, method: :delete, data: { confirm: 'Are you sure?' } %></center>
+          </td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'Add Todo Item', new_list_path %>
+<%= link_to 'Add Todo Item', new_list_path, class: "btn btn-primary" %>
