--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,13 @@
 <h1>My To-Do List</h1>
 
+<center>
+  <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <%= render 'form_index' %>
+    </div>
+  </div>
+</center>
+</br>
 <table class="table table-bordered">
 
   <tbody>
