--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <%= render 'lists/navbar' %>
     <div class="container">
       <%= render 'flash' %>
       <%= yield %>
