--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,13 +1,3 @@
-<h1>My To-Do List</h1>
-
-<center>
-  <div class="card" style="width: 18rem;">
-    <div class="card-body">
-      <%= render 'form_index' %>
-    </div>
-  </div>
-</center>
-</br>
 <table class="table table-bordered">
 
   <tbody>
@@ -38,4 +28,4 @@
 
 <br>
 
-<%= link_to 'Add Todo Item', new_list_path, class: "btn btn-primary" %>
+<% link_to 'Add Todo Item', new_list_path, class: "btn btn-success" %>
