--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing Todo Item</h1>
+<h1>Edit Todo Item</h1>
+</br>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <%= render 'form', list: @list %>
+  </div>
+</div>
+</br>
 
-<%= render 'form', list: @list %>
-
-<%= link_to 'Show', @list %> |
+<% link_to 'Show', @list %>
 <%= link_to 'Back', lists_path %>
