--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,8 +4,8 @@
     <% @lists.each do |list| %>
 
       <% if list.completed %>
-      <tr class="table-secondary">
-        <td class="striker"><%= link_to list.description, edit_list_path(list) %></td>
+      <tr class="bg-dark">
+        <td class="striker"><%= link_to list.description, edit_list_path(list), class: " text-light" %></td>
         <td>
           <% link_to 'Show', list %>
           <% link_to 'Edit', edit_list_path(list) %>
