Delete marked items

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -29,3 +29,5 @@
 <br>
 
 <% link_to 'Add Todo Item', new_list_path, class: "btn btn-success" %>
+</br>
+<%= link_to "Delete Market Items", home_trash_path,data: { confirm: 'Are you sure?' } %>
