--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,18 +7,32 @@
       <tr class="bg-dark">
         <td class="striker"><%= link_to list.description, edit_list_path(list), class: " text-light" %></td>
         <td>
+          <%= form_for(list) do |f| %>
+            <%= f.text_field :description, type: "hidden"%>
+            <%= f.check_box :completed, :checked => false, :style => "visibility: hidden"%>
+            <%= f.submit "Uncross", class: "btn btn-outline-primary" %>
+          <% end %>
+        </td>
+        <td>
           <% link_to 'Show', list %>
           <% link_to 'Edit', edit_list_path(list) %>
-          <center><%= link_to 'Delete', list, method: :delete, data: { confirm: 'Are you sure?' } %></center>
+          <center><%= link_to 'Delete', list,class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %></center>
         </td>
       </tr>
       <% else %>
         <tr>
           <td><%= link_to list.description, edit_list_path(list) %></td>
           <td>
+            <%= form_for(list) do |f| %>
+              <%= f.text_field :description, type: "hidden"%>
+              <%= f.check_box :completed, :checked => true, :style => "visibility: hidden"%>
+              <%= f.submit "Cross off", class: "btn btn-outline-primary" %>
+            <% end %>
+          </td>
+          <td>
             <% link_to 'Show', list %>
             <% link_to 'Edit', edit_list_path(list) %>
-            <center><%= link_to 'Delete', list, method: :delete, data: { confirm: 'Are you sure?' } %></center>
+            <center><%= link_to 'Delete', list, class: "btn btn-outline-danger", method: :delete, data: { confirm: 'Are you sure?' } %></center>
           </td>
         </tr>
       <% end %>
